fix: Repair thumbnail size & gap

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,3 +1,5 @@
+@import "@sass/media.module.scss";
+
 .carouselWrapper {
   margin-top: 20px;
 
@@ -9,6 +11,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 28px;
+
+    @include breakpoint("tablet") {
+      gap: 0;
+    }
   }
   .noItems {
     margin-top: 20px;
